Add initial project documentation including changelog, code of conduct, contributing guidelines, license, security policy, and support information
- Created CHANGELOG.md to document notable changes and adhere to Semantic Versioning.
- Added CODE_OF_CONDUCT.md to outline expected behavior and enforcement within the project.
- Introduced CONTRIBUTING.md to guide potential contributors on project setup, development workflow, and submission processes.
- Included LICENSE file to specify the MIT License for the project.
- Established SECURITY.md to detail the security policy, reporting vulnerabilities, and supported versions.
- Added SUPPORT.md to provide users with troubleshooting steps and guidance on opening issues.

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,5 @@
-github: Teofanis Papadopulos
-custom: https://www.paypal.com/paypalme/teofanis
+github: teofanis
 buy_me_a_coffee: teofanis
-thanks_dev: u/gh/teofanis
+custom:
+- https://www.paypal.com/paypalme/teofanis
+- https://thanks.dev/u/gh/teofanis
